# newtale

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  config.py  eval.py  pyproject.toml  requirements.txt  train.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-merge-deps.yml  ci.yml
configs/: 1b-single-gpu.yaml  1b.yaml  3b.yaml  deepspeed_zero2.json  deepspeed_zero3.json  small.yaml  tiny.yaml
data/: collator.py  dataset.py  mixing.py  preprocessing.py
model/: __init__.py  attention.py  config.py  rope.py  transformer.py
scripts/: claude.sh  convert_to_hf.py  eval_benchmarks.py  launch_slurm.sh  launch_training.sh  prepare_data.sh
spec/: pentesting-agent.md  pretraining-pipeline.md
tests/smoke/: test_training_loop.py
tests/unit/: test_config.py  test_data.py  test_model.py
tokenizer/: tokenizer.py  train_tokenizer.py
training/: checkpoint.py  distributed.py  logging_utils.py  optimizer.py  scheduler.py  trainer.py
